# PhysicTetris

./: .gitignore  CMakeLists.txt  PhysicTetris.rc  PhysicTetris.sln  PhysicTetris.vcxproj  PhysicTetris.vcxproj.filters  resource.h
src/: Event.hpp  InputController.hpp  PhysicTetris.rc  Resources.hpp  Scene.hpp  Vector2f.hpp  main.cpp  resource.h
src/ParticalSystem/: IParticle.hpp  ParticalSystem.hpp  Particle.hpp
src/ParticleSystem/: Finishable.hpp  Particle.hpp  ParticleSystem.hpp  ParticleSystemConfig.hpp  ParticleSystemList.hpp
src/ParticleSystem/Affector/: DisapperingAffector.hpp  IAffector.hpp  RainbowAffector.hpp
src/ParticleSystem/Emitter/: FromCentrEmitter.hpp  IEmitter.hpp  PhysicalEmitter.hpp
src/States/: IState.hpp  InGameState.hpp  MenuState.hpp  RestartGameState.hpp  States.hpp
src/TetrisLogic/: CurrentFigure.hpp  Floor.hpp  SelectedFigure.hpp  Tetris.hpp
src/TetrisLogic/Figure/: FigureCubesBody.hpp  FigureShapeBody.hpp  Figures.hpp  IFigure.hpp
src/TetrisLogic/Rules/: IRules.hpp  Rules.hpp  StandartRules.hpp
src/TetrisVisual/: FigureHighLight.hpp  FigureView.hpp  FloorView.hpp  MenuView.hpp  ParticlesTemplate.hpp  TetrisView.hpp
